--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<h1>С Днем рождения, <strong>Мама</strong>!</h1>
 							</header>
 							<p>Мы уже делали для тебя поздравления из бумаги, из пластилина, из LEGO и даже.. из теннисных шариков. А в этот раз мы решили сделать поздравление <strong>из битов!</strong>   Твои</p> 
-                            <p><a title="это наш Суперкофейник!">НИКИТА<!--круглое фото--><img style="width:100px;" src="images/KIKIT4.jpg" class="round"></a> и <a title="подтягивается 6 раз!">ПАПА<!--круглое фото--><img style="width:100px;" src="images/MOPA3.jpg" class="round"></a><i> и не без участия</i> <a title="спит 23 часа в сутки!">СТЁПИКА<!--круглое фото--><img style="width:100px;" src="images/MOPA3.jpg" class="round"></a>.</p>   
+                            <p><a title="это наш Суперкофейник!">НИКИТА<!--круглое фото--><img style="width:100px;" src="images/KIKIT4.jpg" class="round"></a> и <a title="подтягивается 6 раз!">ПАПА<!--круглое фото--><img style="width:100px;" src="images/MOPA3.jpg" class="round"></a><i> и не без участия</i><a title="спит 23 часа в сутки!">СТЁПИКА<!--круглое фото--><img style="width:100px;" src="images/stepik3.jpg" class="round"></a>.</p>   
 							<a href="#work" class="button big scrolly">Вот, что мы для тебя сделали</a> 
 						</div>
 					</div>
